Authority/sfdc/force-app/main/default/objects/Instance__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Instances</relationshipLabel>
    <relationshipName>Instances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>