Authority/sfdc/force-app/main/default/objects/Instance__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Operator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Instances</relationshipLabel>
    <relationshipName>Instances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>