Authority/sfdc/force-app/main/default/objects/Instance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Operator__c</columns>
    <columns>Module__c</columns>
    <columns>Instance_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>